tests/baselines/reference/genericGetter.errors.txt
tests/cases/compiler/genericGetter.ts(3,9): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
tests/cases/compiler/genericGetter.ts(9,5): error TS2322: Type 'number' is not assignable to type 'string'.


==== tests/cases/compiler/genericGetter.ts (2 errors) ====
    class C<T> {
        data: T;
        get x(): T {
            ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
            return this.data;
        }
    }
    
    var c = new C<number>();
    var r: string = c.x;
        ~
!!! error TS2322: Type 'number' is not assignable to type 'string'.